New version of rest-api-basics with resolved modules and classes