@@ -3,6 +3,8 @@ package com.epam.esm.dao.impl;
 import com.epam.esm.config.DatabaseConfigurationTest;
 import com.epam.esm.entity.GiftCertificate;
 import com.epam.esm.entity.Tag;
+import com.epam.esm.exceptions.ActionFallDaoException;
+import com.epam.esm.exceptions.ObjectNotFoundDaoException;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -15,7 +17,7 @@ import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.*;
 
-import static com.epam.esm.mapper.GiftCertificateColumn.*;
+import static com.epam.esm.constant.GiftCertificateColumn.*;
 import static org.junit.jupiter.api.Assertions.*;
 
 @ContextConfiguration(classes = DatabaseConfigurationTest.class)
@@ -46,7 +48,7 @@ class GiftCertificateDaoImplTest {
     }
 
     @Test
-    void save() {
+    void testSave() {
         GiftCertificate expected = new GiftCertificate("giftCertificate1", "description1", new BigDecimal("20.2"),
                 2, null, null, Collections.singletonList(tag));
         Long saveId = giftCertificateDao.save(expected);
@@ -54,7 +56,7 @@ class GiftCertificateDaoImplTest {
     }
 
     @Test
-    void update() {
+    void testUpdate() throws ActionFallDaoException {
         GiftCertificate actual = new GiftCertificate(1L, "giftCertificateUpdateTest", null,
                 new BigDecimal("11.1"), 1, null, null, Collections.singletonList(null));
         giftCertificateDao.update(convert(actual));
@@ -65,34 +67,28 @@ class GiftCertificateDaoImplTest {
     }
 
     @Test
-    void removeById() {
-        giftCertificateDao.removeById(4L);
-        Optional<GiftCertificate> optional = giftCertificateDao.findById(4L);
+    void testDeleteById() throws ActionFallDaoException {
+        giftCertificateDao.deleteById(3L);
+        Optional<GiftCertificate> optional = giftCertificateDao.findById(3L);
 
         assertTrue(optional.isEmpty());
     }
 
     @Test
-    void findByIdIfGiftCertificateExists() {
+    void testFindByIdIfGiftCertificateExists() {
         Optional<GiftCertificate> optionalGiftCertificate = giftCertificateDao.findById(1L);
         assertTrue(optionalGiftCertificate.isPresent());
     }
 
     @Test
-    void findByIdIfGiftCertificateDoesNotExists() {
-        Optional<GiftCertificate> optionalGiftCertificate = giftCertificateDao.findById(4L);
-        assertFalse(optionalGiftCertificate.isPresent());
-    }
-
-    @Test
-    void getAll() {
+    void testGetAll() {
         List<GiftCertificate> certificateList = giftCertificateDao.getAll();
         assertEquals(certificateList.size(), giftCertificateList.size());
     }
 
 
     @Test
-    void getAttachedTagsWithGiftCertificateId() {
+    void testGetAttachedTagsWithGiftCertificateId() {
         List<Tag> tagList = giftCertificateDao.getAttachedTagsWithGiftCertificateId(1L);
         Optional<Tag> expected = tagList.stream().filter(entity -> entity.getName().equals(tag.getName())).findAny();
 
@@ -100,8 +96,8 @@ class GiftCertificateDaoImplTest {
     }
 
     @Test
-    void deleteTagsAssociation() {
-        giftCertificateDao.deleteTagsAssociation(2L, Collections.singletonList(2L));
+    void testDeleteTagsAssociation() throws ObjectNotFoundDaoException, ActionFallDaoException {
+        giftCertificateDao.deleteTagsAssociation(2L, List.of(tag));
         Optional<GiftCertificate> expectedGiftCertificate = giftCertificateDao.findById(2L);
 
         Optional<Tag> optionalTag = expectedGiftCertificate.get().getTagList().stream().filter(entity -> entity.getId() == 2L).findFirst();
@@ -109,36 +105,42 @@ class GiftCertificateDaoImplTest {
     }
 
     @Test
-    void filterGiftCertificateByGivenName() {
+    void testFilterGiftCertificateByGivenName() throws ObjectNotFoundDaoException {
         GiftCertificate actual = new GiftCertificate("giftCertificate2", null,
                 null, 1, null, null, Collections.singletonList(null));
 
         Map<String, String> filter = new HashMap<>();
         filter.put("name", actual.getName());
-        List<GiftCertificate> giftList = giftCertificateDao.getGiftCertificateByFilteringParameters(filter);
+        List<GiftCertificate> giftList = giftCertificateDao.doFilter(filter);
 
         assertEquals(giftList.get(0).getName(), actual.getName());
     }
 
     @Test
-    void filterGiftCertificateByPartOfName() {
+    void testFilterGiftCertificateByPartOfName() throws ObjectNotFoundDaoException {
         GiftCertificate actual = new GiftCertificate("giftCertif", null,
                 null, 1, null, null, Collections.singletonList(null));
 
         Map<String, String> filter = new HashMap<>();
         filter.put("partOfName", actual.getName());
-        List<GiftCertificate> giftList = giftCertificateDao.getGiftCertificateByFilteringParameters(filter);
+        List<GiftCertificate> giftList = giftCertificateDao.doFilter(filter);
 
         assertFalse(giftList.isEmpty());
     }
     @Test
-    void attachTagToGiftCertificate() {
-        giftCertificateDao.attachTagToGiftCertificate(2L, 3L);
+    void testAttachTagToGiftCertificate() throws ActionFallDaoException {
+        giftCertificateDao.attachTagToGiftCertificate(1L, 1L);
 
-        List<Tag> tagList = giftCertificateDao.getAttachedTagsWithGiftCertificateId(3L);
+        List<Tag> tagList = giftCertificateDao.getAttachedTagsWithGiftCertificateId(1L);
         Optional<Tag> expected = tagList.stream().filter(entity -> entity.getName().equals(tag.getName())).findAny();
 
         assertEquals(expected.get().getName(), tag.getName());
+    }
+
+    @Test
+    void testFindByName(){
+        Optional<GiftCertificate> actual = giftCertificateDao.findByName("certificate3");
+        assertTrue(actual.isEmpty());
     }
 
     private Map<String, String> convert(GiftCertificate actual) {
